--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -11,6 +11,7 @@ body{
     width: 1440px;
     background: #FFF;
     margin: 0 auto!important;
+    overflow-x: hidden
     
 }
 @media (min-width: 390px) and (max-width: 822px) {
@@ -20,6 +21,7 @@ body{
   }
 html{
     background: black;
+    overflow-x: hidden
 }
 @import "./header";
 @import "./mini-header";
